--- a/css/style.css
+++ b/css/style.css
@@ -4,18 +4,33 @@
   box-sizing: border-box;
 }
 
+/* UTILITY */
+
+.clearfix::after{
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* // UTILITY */
+
 body{
   background-image: url(https://www.technocrazed.com/wp-content/uploads/2015/12/Wood-Wallpaper-Background-39.jpg);
+
 }
+
 .container_all{
   width: 50%;
   height: 100vh;
   margin: auto;
 }
+
+/* HEADER STYLE */
 .nav_bar{
+  padding-top: 10px;
   margin: auto;
   width: 100%;
-  height: 30%;
+  height: 25%;
   border: 6px solid white;
   background-image: url(https://s0.wp.com/wp-content/themes/premium/natural/images/natural-default-header.jpg);
   background-position: center;
@@ -56,7 +71,7 @@ ul > li:hover{
   width: 400px;
 }
 
-div > p{
+header > div > p{
   font-size: 20px;
   text-align: center;
   color: white;
@@ -70,3 +85,100 @@ div > p{
   text-decoration: none;
   list-style: none;
 }
+/* /HEADER STYLE */
+/* <!-- LEFT COLUMN --> */
+.left_col{
+  float: left;
+  margin-top: 10px;
+  width: 25%;
+  background: white;
+}
+.left_col ul > li{
+  list-style: none;
+}
+
+.left_col ul > li > a{
+  text-decoration: none;
+}
+/* <!-- // LEFT COLUMN --> */
+
+/* <!-- MIDDLE COLUMN --> */
+
+.middle_col{
+  float: left;
+  width: 50%;
+  margin: 0 20px;
+  margin-top: 10px;
+  background: white;
+}
+
+.middle_col > p{
+  color: black;
+  font-size: 15px;
+  text-align: left;
+  margin: 10px 20px;
+}
+
+.middle_col > h2{
+  margin: 10px 20px;
+}
+
+/* <!-- // MIDDLE COLUMN --> */
+
+/* <!-- RIGHT COLUMN --> */
+.right_col{
+  margin-top: 10px;
+  float: left;
+  width: 20%;
+}
+
+.second_widget, .third_widget {
+  margin: 20px 0;
+}
+
+.first_widget  > p{
+  margin: 10px 20px;
+  line-height: 25px;
+}
+.second_widget  > p{
+  margin: 10px 20px;
+  line-height: 25px;
+}
+.third_widget  > p{
+  margin: 10px 20px;
+  line-height: 25px;
+}
+.bg_white{
+  background: white;
+}
+/* <!-- // RIGHT COLUMN --> */
+
+/* FOOTER */
+footer{
+  float: left;
+  width: 100%;
+  height: 100px;
+  margin-bottom: 10px;
+  background: white;
+}
+
+.up_footer{
+  text-align: center;
+  width: 100%;
+  height: 40%;
+  border-bottom: 2px solid black;
+}
+
+.footer_icons{
+  width: 100%;
+  height: 60%;
+  text-align: center;
+  display: inline-block;
+}
+
+.footer_icons i{
+  font-size: 40px;
+  padding: 10px 70px;
+}
+
+/* // FOOTER */
