--- a/css/style.css
+++ b/css/style.css
@@ -16,13 +16,10 @@
 
 body{
   background-image: url(https://www.technocrazed.com/wp-content/uploads/2015/12/Wood-Wallpaper-Background-39.jpg);
-
-}
-
-.container_all{
-  width: 50%;
+  width: 1200px;
   height: 100vh;
   margin: auto;
+
 }
 
 /* HEADER STYLE */
@@ -30,12 +27,31 @@ body{
   padding-top: 10px;
   margin: auto;
   width: 100%;
-  height: 25%;
+  height: 30%;
   border: 6px solid white;
   background-image: url(https://s0.wp.com/wp-content/themes/premium/natural/images/natural-default-header.jpg);
   background-position: center;
   background-size: cover;
   position: relative;
+}
+
+.logo_navbar{
+  position: absolute;
+  width: 400px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.logo_navbar  img{
+  width: 400px;
+}
+
+header > div > p{
+  font-size: 20px;
+  text-align: center;
+  color: white;
+  text-transform: uppercase;
 }
 
 .navigation_links{
@@ -53,30 +69,17 @@ body{
   font-size: 20px;
   padding-left: 5px;
   padding-right: 5px;
+
 }
-ul > li:hover{
+
+ul > li > a{
+  text-decoration: none;
+  color: white;
+}
+.navigation_links > ul > li:hover{
   background: rgba(0, 0, 0, 0.5);
 }
 
-.logo_navbar{
-  position: absolute;
-  width: 400px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.logo_navbar  img{
-  display: block;
-  width: 400px;
-}
-
-header > div > p{
-  font-size: 20px;
-  text-align: center;
-  color: white;
-  text-transform: uppercase;
-}
 
 
 .navigation_links ul > li{
@@ -86,19 +89,27 @@ header > div > p{
   list-style: none;
 }
 /* /HEADER STYLE */
+
 /* <!-- LEFT COLUMN --> */
 .left_col{
   float: left;
   margin-top: 10px;
-  width: 25%;
+  width: 20%;
   background: white;
 }
 .left_col ul > li{
   list-style: none;
+  padding: 10px;
 }
 
 .left_col ul > li > a{
   text-decoration: none;
+  line-height: 20px;
+  color: green;
+}
+
+h2 > i{
+  color: orange;
 }
 /* <!-- // LEFT COLUMN --> */
 
@@ -106,8 +117,8 @@ header > div > p{
 
 .middle_col{
   float: left;
-  width: 50%;
-  margin: 0 20px;
+  width: 55%;
+  margin-left:30px;
   margin-top: 10px;
   background: white;
 }
@@ -117,6 +128,7 @@ header > div > p{
   font-size: 15px;
   text-align: left;
   margin: 10px 20px;
+  line-height: 25px;
 }
 
 .middle_col > h2{
@@ -128,8 +140,12 @@ header > div > p{
 /* <!-- RIGHT COLUMN --> */
 .right_col{
   margin-top: 10px;
-  float: left;
+  float: right;
   width: 20%;
+}
+
+.right_col > div > h2{
+  margin: 10px 20px;
 }
 
 .second_widget, .third_widget {
@@ -139,14 +155,20 @@ header > div > p{
 .first_widget  > p{
   margin: 10px 20px;
   line-height: 25px;
+  font-size: 15px;
+  height: calc(100% / 3);
 }
 .second_widget  > p{
   margin: 10px 20px;
   line-height: 25px;
+  font-size: 15px;
+  height: calc(100% / 3);
 }
 .third_widget  > p{
   margin: 10px 20px;
   line-height: 25px;
+  font-size: 15px;
+  height: calc(100% / 3);
 }
 .bg_white{
   background: white;
@@ -158,7 +180,7 @@ footer{
   float: left;
   width: 100%;
   height: 100px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   background: white;
 }
 
@@ -179,6 +201,13 @@ footer{
 .footer_icons i{
   font-size: 40px;
   padding: 10px 70px;
+}
+.footer_icons > a {
+  text-decoration: none;
+  color: lightgrey;
+}
+.footer_icons i:hover{
+  color: blue;
 }
 
 /* // FOOTER */
