--- a/css/style.css
+++ b/css/style.css
@@ -16,42 +16,23 @@
 
 body{
   background-image: url(https://www.technocrazed.com/wp-content/uploads/2015/12/Wood-Wallpaper-Background-39.jpg);
+}
+
+#container{
   width: 1200px;
   height: 100vh;
-  margin: auto;
-
+  margin: 0 auto;
 }
-
 /* HEADER STYLE */
 .nav_bar{
-  padding-top: 10px;
-  margin: auto;
-  width: 100%;
-  height: 30%;
+  margin-top: 10px;
+  width: 1200px;
+  height: 250px;
   border: 6px solid white;
-  background-image: url(https://s0.wp.com/wp-content/themes/premium/natural/images/natural-default-header.jpg);
-  background-position: center;
+  background: red;
   background-size: cover;
   position: relative;
-}
-
-.logo_navbar{
-  position: absolute;
-  width: 400px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.logo_navbar  img{
-  width: 400px;
-}
-
-header > div > p{
-  font-size: 20px;
   text-align: center;
-  color: white;
-  text-transform: uppercase;
 }
 
 .navigation_links{
@@ -64,30 +45,8 @@ header > div > p{
   vertical-align: middle;
   background: #504741;
 }
-.navigation_links ul > li{
-  color: white;
-  font-size: 20px;
-  padding-left: 5px;
-  padding-right: 5px;
-
-}
-
-ul > li > a{
-  text-decoration: none;
-  color: white;
-}
-.navigation_links > ul > li:hover{
-  background: rgba(0, 0, 0, 0.5);
-}
 
 
-
-.navigation_links ul > li{
-  display: inline-block;
-  vertical-align: middle;
-  text-decoration: none;
-  list-style: none;
-}
 /* /HEADER STYLE */
 
 /* <!-- LEFT COLUMN --> */
@@ -95,83 +54,47 @@ ul > li > a{
   float: left;
   margin-top: 10px;
   width: 20%;
-  background: white;
-}
-.left_col ul > li{
-  list-style: none;
-  padding: 10px;
+  height: 30%;
+  background: purple;
+  border-radius: 10px;
 }
 
-.left_col ul > li > a{
-  text-decoration: none;
-  line-height: 20px;
-  color: green;
-}
 
-h2 > i{
-  color: orange;
-}
 /* <!-- // LEFT COLUMN --> */
 
 /* <!-- MIDDLE COLUMN --> */
 
 .middle_col{
   float: left;
-  width: 55%;
-  margin-left:30px;
+  width: 50%;
+  height: 35%;
+  margin:5%;
   margin-top: 10px;
-  background: white;
-}
+  background: green;
+  border-radius: 10px;
 
-.middle_col > p{
-  color: black;
-  font-size: 15px;
-  text-align: left;
-  margin: 10px 20px;
-  line-height: 25px;
-}
-
-.middle_col > h2{
-  margin: 10px 20px;
 }
 
 /* <!-- // MIDDLE COLUMN --> */
 
 /* <!-- RIGHT COLUMN --> */
 .right_col{
-  margin-top: 10px;
-  float: right;
+  float: left;
   width: 20%;
+  height: 65%;
 }
 
-.right_col > div > h2{
-  margin: 10px 20px;
-}
 
-.second_widget, .third_widget {
+.first_widget, .second_widget, .third_widget {
   margin: 20px 0;
+  width: 100%;
+  height: 30%;
 }
 
-.first_widget  > p{
-  margin: 10px 20px;
-  line-height: 25px;
-  font-size: 15px;
-  height: calc(100% / 3);
-}
-.second_widget  > p{
-  margin: 10px 20px;
-  line-height: 25px;
-  font-size: 15px;
-  height: calc(100% / 3);
-}
-.third_widget  > p{
-  margin: 10px 20px;
-  line-height: 25px;
-  font-size: 15px;
-  height: calc(100% / 3);
-}
-.bg_white{
-  background: white;
+.bg_orange{
+  background: orange;
+  border-radius: 10px;
+  margin-top:10px;
 }
 /* <!-- // RIGHT COLUMN --> */
 
@@ -182,32 +105,14 @@ footer{
   height: 100px;
   margin-bottom: 20px;
   background: white;
+  border-radius: 10px;
 }
 
 .up_footer{
   text-align: center;
   width: 100%;
   height: 40%;
+  color: grey;
   border-bottom: 2px solid black;
 }
-
-.footer_icons{
-  width: 100%;
-  height: 60%;
-  text-align: center;
-  display: inline-block;
-}
-
-.footer_icons i{
-  font-size: 40px;
-  padding: 10px 70px;
-}
-.footer_icons > a {
-  text-decoration: none;
-  color: lightgrey;
-}
-.footer_icons i:hover{
-  color: blue;
-}
-
 /* // FOOTER */
